Bug 17944 - patch to avoid gcc warning for libXpm
Summary: patch to avoid gcc warning for libXpm
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Lib/Xpm (show other bugs)
Version: 7.3 (2007.09)
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: janitor, patch
Depends on:
Blocks:
 
Reported: 2008-10-07 04:39 UTC by Peter Breitenlohner
Modified: 2008-10-20 19:37 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch to avoid gcc warning (643 bytes, patch)
2008-10-07 04:39 UTC, Peter Breitenlohner
no flags Details | Splinter Review

Description Peter Breitenlohner 2008-10-07 04:39:19 UTC
Created attachment 19434 [details] [review]
patch to avoid gcc warning

Attached is a small patch avoiding a gcc warning for libXpm (V 3.5.7)
Comment 1 Alan Coopersmith 2008-10-20 19:37:28 UTC
Patch pushed to git master, thanks for the fix:

commit 41e4e2de4d73d098d332ece0410e9f8fda4fe10d
Author: Peter Breitenlohner <peb@mppmu.mpg.de>
Date:   Mon Oct 20 19:36:52 2008 -0700

    X.Org Bug 17944: avoid gcc warning for libXpm
    
    <http://bugs.freedesktop.org/show_bug.cgi?id=17944>
    
    Avoid the gcc warning
    cxpm/cxpm.c:102: warning: no previous prototype for 'ErrorMessage'


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.