X.Org Bug 17944: avoid gcc warning for libXpm

<http://bugs.freedesktop.org/show_bug.cgi?id=17944>

Avoid the gcc warning
cxpm/cxpm.c:102: warning: no previous prototype for 'ErrorMessage'